Include models that have list properties that point to the same list type
